c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_parse/empty_cast.c
int main(void) {
    /* A cast expression must include at least one type specifier */
    return () 0;
}